<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Account">

        <Preference
            android:summary="@string/pref_twitter_summary"
            android:title="@string/pref_twitter_title">
            <intent
                android:action="android.intent.action.view"
                android:targetClass="net.nonylene.photolinkviewer.TwitterOAuthActivity"
                android:targetPackage="net.nonylene.photolinkviewer"/>
        </Preference>

        <Preference
            android:key="instagram_preference"
            android:summary="@string/instagram_preference_summary"
            android:title="@string/instagram_pregerence_title"/>

        <SwitchPreference
            android:key="instagram_api"
            android:summary="@string/instagram_api_summary"
            android:title="@string/instagram_api_title"/>

    </PreferenceCategory>

    <Preference
        android:summary="@string/display_preference_summary"
        android:title="@string/display_preference_title">
        <intent
            android:action="android.intent.action.view"
            android:targetClass="net.nonylene.photolinkviewer.core.PLVPreferenceActivity"
            android:targetPackage="net.nonylene.photolinkviewer"/>
    </Preference>

    <PreferenceCategory
        android:title="@string/others_title">

        <PreferenceScreen
            android:summary="@string/apref_summary"
            android:title="@string/apref_title">

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disp_tweet"
                android:summary="@string/disp_tweet_summary"
                android:title="@string/disp_tweet_title"/>

        </PreferenceScreen>

        <Preference
            android:key="about_app_preference"
            android:title="@string/about_app_pretitle">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
