<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/instagram_image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="instagram_button"/>

    <TextView
        android:id="@+id/instagram_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/instagram_not_authorized"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/instagram_oauth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram_oauth_text"/>

        <LinearLayout
            android:id="@+id/instagram_unauth_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">


            <Button
                android:id="@+id/instagram_unauth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/instagram_unoauth_text"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>