<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/option_base_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/option_base_view"
        app:layout_anchorGravity="end|bottom"
        app:layout_behavior="net.nonylene.photolinkviewer.tool.ForSnackbarBehavior">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/webbutton"
                    style="@style/FloatingActionButton"
                    android:contentDescription="@string/option_fragment_open"
                    android:src="@drawable/ic_open_in_browser_white"
                    android:visibility="gone"
                    app:backgroundTint="#24a8ed"
                    />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/setbutton"
                    style="@style/FloatingActionButton"
                    android:contentDescription="@string/option_fragment_settings"
                    android:src="@drawable/ic_settings_white"
                    android:visibility="gone"
                    app:backgroundTint="#24a8ed"
                    />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/dlbutton"
                    style="@style/FloatingActionButton"
                    android:contentDescription="@string/option_fragment_download"
                    android:src="@drawable/ic_file_download_white"
                    android:visibility="gone"
                    app:backgroundTint="#24a8ed"
                    />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/retweet_button"
                    style="@style/FloatingActionButton"
                    android:contentDescription="@string/retweet_button_description"
                    android:src="@drawable/retweet_white"
                    android:visibility="gone"
                    app:backgroundTint="#f4554f"
                    />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/like_button"
                    style="@style/FloatingActionButton"
                    android:contentDescription="@string/like_button_description"
                    android:src="@drawable/ic_favorite_white"
                    android:visibility="gone"
                    app:backgroundTint="#f4554f"
                    />

            </LinearLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/basebutton"
            style="@style/FloatingActionButton"
            android:contentDescription="@string/option_fragment_openclose"
            android:src="@drawable/ic_expand_less_white"
            app:backgroundTint="#46d249"
            />

        <!-- avoid shadow cut by padding -->
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rotate_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/option_base_view"
        app:layout_anchorGravity="start|bottom"
        app:layout_behavior="net.nonylene.photolinkviewer.tool.ForSnackbarBehavior"
        >

        <!-- avoid shadow cut by padding -->
        <Space
            android:id="@+id/rotate_space"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"
            android:layout_alignParentBottom="true"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/rotate_leftbutton"
            style="@style/FloatingActionButton"
            android:layout_above="@id/rotate_space"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/option_fragment_openclose"
            android:src="@drawable/ic_rotate_left_white"
            android:visibility="gone"
            app:backgroundTint="#f8cd24"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/rotate_rightbutton"
            style="@style/FloatingActionButton"
            android:layout_above="@id/rotate_space"
            android:layout_toRightOf="@id/rotate_leftbutton"
            android:contentDescription="@string/option_fragment_openclose"
            android:src="@drawable/ic_rotate_right_white"
            android:visibility="gone"
            app:backgroundTint="#f8cd24"
            />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
